bugfix: Break unbreakable words to prevent stretch

--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -83,6 +83,7 @@ main {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    word-wrap: break-word;
 }
 
 main > .row {
